force-app/main/default/objects/Active_Employees__c/Active_Employees__c.object-meta.xml
<CustomObject>
    <label>Active Employee</label>
    <nameField>
        <label>Active Employees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>