force-app/main/default/objects/Active_Employees__c/fields/Alert_Details__c.field-meta.xml
<CustomField>
    <fullName>Alert_Details__c</fullName>
    <label>Alert Details</label>
    <length>10</length>
    <type>Text</type>
</CustomField>