force-app/main/default/objects/Active_Employees__c/fields/CallRevu_Active_Roster_GUID__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Active_Roster_GUID__c</fullName>
    <label>CallRevu Active Roster GUID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>