force-app/main/default/objects/Active_Employees__c/fields/CallRevu_GUID_ID__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_GUID_ID__c</fullName>
    <externalId>true</externalId>
    <label>CallRevu_GUID_ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>