force-app/main/default/objects/Active_Employees__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Case( Title__c , 
&quot;Accounting&quot;,&quot;Administrative&quot;, 
&quot;Admin&quot;,&quot;Administrative&quot;, 
&quot;Appt Coordinator&quot;,&quot;New&quot;, 
&quot;Asst Service Mgr.&quot;,&quot;Service&quot;, 
&quot;Asst SM&quot;,&quot;New&quot;, 
&quot;BDC Agent&quot;,&quot;New&quot;, 
&quot;BDC Director&quot;,&quot;New&quot;, 
&quot;BDC Mgr.&quot;,&quot;New&quot;, 
&quot;BDC Sales&quot;,&quot;New&quot;, 
&quot;BDC Service&quot;,&quot;Service&quot;, 
&quot;Body Estimator&quot;,&quot;Body Shop&quot;, 
&quot;Body Shop Manager&quot;,&quot;Body Shop&quot;, 
&quot;CallRevu Employee&quot;,&quot;&quot;, 
&quot;CallRevu PM&quot;,&quot;&quot;, 
&quot;CallRevu Test&quot;,&quot;&quot;, 
&quot;Cashier&quot;,&quot;Service&quot;, 
&quot;Controller&quot;,&quot;Administrative&quot;, 
&quot;Customer Relations Manager&quot;,&quot;New&quot;, 
&quot;Customer Service Manager&quot;,&quot;New&quot;, 
&quot;DX Manager&quot;,&quot;&quot;, 
&quot;Executive&quot;,&quot;&quot;, 
&quot;Fin Agent&quot;,&quot;Finance&quot;, 
&quot;Fin Director&quot;,&quot;Finance&quot;, 
&quot;Fin Mgr.&quot;,&quot;Finance&quot;, 
&quot;Fixed Ops Director&quot;,&quot;Service&quot;, 
&quot;Fleet Mgr&quot;,&quot;New&quot;, 
&quot;GM&quot;,&quot;&quot;, 
&quot;Greeter&quot;,&quot;Administrative&quot;, 
&quot;GSM&quot;,&quot;New&quot;, 
&quot;HR Mgr.&quot;,&quot;Administrative&quot;, 
&quot;Internet Director&quot;,&quot;New&quot;, 
&quot;Internet Manager&quot;,&quot;New&quot;, 
&quot;Internet Sales&quot;,&quot;New&quot;, 
&quot;IT&quot;,&quot;&quot;, 
&quot;Marketing Director&quot;,&quot;New&quot;, 
&quot;NCM&quot;,&quot;New&quot;, 
&quot;Office Mgr.&quot;,&quot;Administrative&quot;, 
&quot;Operator&quot;,&quot;Administrative&quot;, 
&quot;Other&quot;,&quot;&quot;, 
&quot;Owner / DP&quot;,&quot;&quot;, 
&quot;Parts Counter&quot;,&quot;Parts&quot;, 
&quot;Parts Manager&quot;,&quot;Parts&quot;, 
&quot;--Placeholder--&quot;,&quot;&quot;, 
&quot;President&quot;,&quot;&quot;, 
&quot;Receptionist&quot;,&quot;Administrative&quot;, 
&quot;Retail / Counter Rep&quot;,&quot;Parts&quot;, 
&quot;Sales Person&quot;,&quot;New&quot;, 
&quot;Service Advisor&quot;,&quot;Service&quot;, 
&quot;Service BDC&quot;,&quot;Service&quot;, 
&quot;Service Director&quot;,&quot;Service&quot;, 
&quot;Service Writer&quot;,&quot;Service&quot;, 
&quot;SM&quot;,&quot;New&quot;, 
&quot;Srvc Mgr.&quot;,&quot;Service&quot;, 
&quot;Trainer&quot;,&quot;&quot;, 
&quot;UCM&quot;,&quot;Used&quot;, 
&quot;Vice President&quot;,&quot;&quot;, 
&quot;Wholesale Parts Mgr&quot;,&quot;Parts&quot;, 
&quot;Wholesale Parts Rep&quot;,&quot;Parts&quot;, 
&quot;Whsl Parts&quot;,&quot;Parts&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>