force-app/main/default/objects/Active_Employees__c/fields/Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Alerts</label>
    <type>Checkbox</type>
</CustomField>