force-app/main/default/objects/Active_Employees__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>