force-app/main/default/objects/Active_Employees__c/fields/Hubspot_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_ID__c</fullName>
    <label>Hubspot ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>