force-app/main/default/objects/Active_Employees__c/fields/InActive_Date__c.field-meta.xml
<CustomField>
    <fullName>InActive_Date__c</fullName>
    <label>InActive Date</label>
    <type>DateTime</type>
</CustomField>