force-app/main/default/objects/Active_Employees__c/fields/Login_Type__c.field-meta.xml
<CustomField>
    <fullName>Login_Type__c</fullName>
    <label>Login Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>