force-app/main/default/objects/Active_Employees__c/fields/Paid_Email__c.field-meta.xml
<CustomField>
    <fullName>Paid_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Email</label>
    <type>Checkbox</type>
</CustomField>