force-app/main/default/objects/Active_Employees__c/fields/Paid_Text__c.field-meta.xml
<CustomField>
    <fullName>Paid_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Text</label>
    <type>Checkbox</type>
</CustomField>