force-app/main/default/objects/Active_Employees__c/fields/Parent_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Number__c</fullName>
    <label>Parent Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>