force-app/main/default/objects/Active_Employees__c/fields/Preferred_Login__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Login__c</fullName>
    <label>Preferred Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>