force-app/main/default/objects/Active_Employees__c/fields/Received_Entry_Key2__c.field-meta.xml
<CustomField>
    <fullName>Received_Entry_Key2__c</fullName>
    <label>Received Entry Key2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>