force-app/main/default/objects/Active_Employees__c/fields/Received_ID__c.field-meta.xml
<CustomField>
    <fullName>Received_ID__c</fullName>
    <label>Received ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>