force-app/main/default/objects/Active_Employees__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <label>Service Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Active Employees</relationshipLabel>
    <relationshipName>Active_Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>