force-app/main/default/objects/Active_Employees__c/fields/Telephone_PIN__c.field-meta.xml
<CustomField>
    <fullName>Telephone_PIN__c</fullName>
    <label>Telephone PIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>