force-app/main/default/objects/Active_Employees__c/fields/Text_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Text_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text Alerts</label>
    <type>Checkbox</type>
</CustomField>