force-app/main/default/objects/Active_Employees__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Appt Coordinator</fullName>
            </value>
            <value>
                <fullName>Asst Service Mgr.</fullName>
            </value>
            <value>
                <fullName>Asst SM</fullName>
            </value>
            <value>
                <fullName>BDC Agent</fullName>
            </value>
            <value>
                <fullName>BDC Director</fullName>
            </value>
            <value>
                <fullName>BDC Mgr.</fullName>
            </value>
            <value>
                <fullName>BDC Sales</fullName>
            </value>
            <value>
                <fullName>BDC Service</fullName>
            </value>
            <value>
                <fullName>Body Estimator</fullName>
            </value>
            <value>
                <fullName>Body Shop Manager</fullName>
            </value>
            <value>
                <fullName>CallRevu Employee</fullName>
            </value>
            <value>
                <fullName>CallRevu PM</fullName>
            </value>
            <value>
                <fullName>CallRevu Test</fullName>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Customer Relations Manager</fullName>
            </value>
            <value>
                <fullName>Customer Service Manager</fullName>
            </value>
            <value>
                <fullName>DX Manager</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Fin Agent</fullName>
            </value>
            <value>
                <fullName>Fin Director</fullName>
            </value>
            <value>
                <fullName>Fin Mgr.</fullName>
            </value>
            <value>
                <fullName>Fixed Ops Director</fullName>
            </value>
            <value>
                <fullName>Fleet Mgr</fullName>
            </value>
            <value>
                <fullName>Founder/CEO</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>Greeter</fullName>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>