force-app/main/default/objects/Active_Employees__c/fields/Title_Match__c.field-meta.xml
<CustomField>
    <fullName>Title_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Match</label>
    <type>Checkbox</type>
</CustomField>