force-app/main/default/objects/Active_Employees__c/fields/Trans__c.field-meta.xml
<CustomField>
    <fullName>Trans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trans</label>
    <type>Checkbox</type>
</CustomField>