force-app/main/default/objects/Active_Employees__c/fields/Update_in_360__c.field-meta.xml
<CustomField>
    <fullName>Update_in_360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update in 360</label>
    <type>Checkbox</type>
</CustomField>