force-app/main/default/objects/Active_Employees__c/fields/X18_Character_Service_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Character_Service_Agreement_ID__c</fullName>
    <formula>CaseSafeID( Service_Agreement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Character Service Agreement ID</label>
    <type>Text</type>
</CustomField>