force-app/main/default/objects/Active_Employees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X18_Character_Service_Agreement_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>