force-app/main/default/objects/Active_Employees__c/listViews/For_Enrollment_Purposes.listView-meta.xml
<ListView>
    <fullName>For_Enrollment_Purposes</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Cell_Phone__c</columns>
    <columns>Telephone_PIN__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Agreement__c</field>
        <operation>equals</operation>
        <value>Guntersville Chevrolet</value>
    </filters>
    <label>For Enrollment Purposes</label>
</ListView>